--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node backend/index.js",
     "install-backend": "npm install",
     "install-frontend": "cd frontend && npm install",
-    "build-frontend": "cd frontend && npx vite build",
+    "build-frontend": "npx vite build",
     "build": "npm run install-backend && npm run install-frontend && npm run build-frontend"
   },
   "keywords": [],
